<!--
  ~ Copyright (C) 2020 denkbares GmbH, Germany
  ~
  ~ This is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU Lesser General Public License as published by the Free
  ~ Software Foundation; either version 3 of the License, or (at your option) any
  ~ later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  ~ details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with this software; if not, write to the Free Software Foundation,
  ~ Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA, or see the FSF
  ~ site: http://www.fsf.org.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.denkbares</groupId>
	<artifactId>denkbares-Commons</artifactId>
	<version>12.5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>denkbares open source common utilities</description>

	<properties>
		<denkbares.version>${project.version}</denkbares.version>
		<graphdb.version>9.1.1</graphdb.version>
		<rdf4j.version>3.0.1</rdf4j.version>
		<d3web.version>${project.version}</d3web.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>denkbares-PluginManager</module>
		<module>denkbares-Utils</module>
		<module>denkbares-Progress</module>
		<module>denkbares-SemanticCore</module>
		<module>denkbares-SemanticCore-Plugin-ExtensionPoints</module>
		<module>denkbares-SemanticCore-Plugin-Jena</module>
		<module>denkbares-SemanticCore-Plugin-GraphDB</module>
		<module>denkbares-TestUtils</module>
		<module>denkbares-PythonConnector</module>
	</modules>

	<licenses>
		<license>
			<name>The GNU Lesser General Public License, Version 3.0</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<build>
		<defaultGoal>package</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.12</version>
					<configuration>
						<testFailureIgnore>true</testFailureIgnore>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.10</version>
					<executions>
						<execution>
							<id>copy-dependencies</id>
							<phase>test-compile</phase>
							<goals>
								<goal>build-classpath</goal>
							</goals>
							<configuration>
								<overWriteReleases>false</overWriteReleases>
								<overWriteSnapshots>false</overWriteSnapshots>
								<overWriteIfNewer>true</overWriteIfNewer>
								<pathSeparator>;</pathSeparator>
								<outputFile>target/dependencies/output.txt</outputFile>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>19.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>net.sf.jpf</groupId>
				<artifactId>jpf</artifactId>
				<version>1.5</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-model</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-repository-api</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-repository-manager</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-repository-sail</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-sail-memory</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-sail-nativerdf</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-sail-spin</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-rio-rdfxml</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-rio-turtle</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ontotext.graphdb</groupId>
				<artifactId>graphdb-free-runtime</artifactId>
				<version>${graphdb.version}</version>
				<exclusions>
					<!-- Overhead we don need -->
					<exclusion>
						<artifactId>rdf4j-http-server-spring</artifactId>
						<groupId>org.eclipse.rdf4j</groupId>
					</exclusion>
					<!-- We want a new logback for swagger compatibility -->
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-core</artifactId>
					</exclusion>
					<!-- Exclude mongo db dependencies to not cause issues with other databases in project -->
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>mongodb-driver-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>mongodb-driver-sync</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>bson</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.httpcomponents</groupId>
						<artifactId>httpclient-osgi</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-jcl</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-aop</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-webmvc</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-expression</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-web</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.2.3</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>1.2.3</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.9.9.2</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.9.9</version>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>apache-jena-libs</artifactId>
				<type>pom</type>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-csv</artifactId>
				<version>1.4</version>
			</dependency>

			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-SemanticCore</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-Utils</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-PluginManager</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-SemanticCore-Plugin-ExtensionPoints</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-TestingFramework</artifactId>
				<version>${d3web.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<id>des-repo-public</id>
			<name>Denkbares Public Repository</name>
			<url>https://repo.denkbares.com/repo-public/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>des-releases-public</id>
			<name>Denkbares Public Releases Repository</name>
			<url>https://repo.denkbares.com/releases-public/</url>
		</repository>
	</distributionManagement>
</project>
